@@ -95,11 +95,13 @@ public:
   IOPORT_TRIS * tris;
   IOPORT_LATCH * latch;   // non-null on 18x parts only
 
-  // int update_stimuli(void);
-  void put(unsigned int new_value);
+  virtual void put(unsigned int new_value);
   void update_pin_directions(unsigned int new_tris);
   void change_pin_direction(unsigned int bit_number, bool new_direction);
 
+  virtual void check_peripherals(RegisterValue rv) {}
+  virtual unsigned int get(void);
+  virtual bool get_bit(unsigned int bit_number);
   PIC_IOPORT(unsigned int _num_iopins=8);
 
 };
@@ -130,8 +132,8 @@ public:
 
   void put(unsigned int new_value);
   void put_value(unsigned int new_value);
+  virtual unsigned int get(void);
   virtual void setbit(unsigned int bit_number, bool new_value);
-  unsigned int get(void);
   IOPORT_LATCH(void);
 
 };
@@ -148,8 +150,10 @@ public:
   PORTB(void);
 
   void rbpu_intedg_update(unsigned int);
-  unsigned int get(void);
-  void setbit(unsigned int bit_number, bool new_value);
+  virtual void put(unsigned int new_value);
+  virtual unsigned int get(void);
+  virtual void setbit(unsigned int bit_number, bool new_value);
+  virtual void check_peripherals(RegisterValue rv);
 
   virtual void reset(RESET_TYPE r);
 
@@ -200,7 +204,8 @@ public:
   };
 
   void setbit(unsigned int bit_number, bool new_value);
-  unsigned int get(void);
+  virtual unsigned int get(void);
+  virtual void check_peripherals(RegisterValue rv);
 
   SSP_MODULE *ssp;
 
